k8s/varnish.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: varnish
  namespace: drupal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: varnish
  template:
    metadata:
      labels:
        app: varnish
    spec:
      containers:
        - name: varnish
          image: varnish:7.7
          args:
            - "-F"
            - "-f"
            - "/etc/varnish/default.vcl"
          ports:
            - containerPort: 6081
          volumeMounts:
            - name: config
              mountPath: /etc/varnish/default.vcl
              subPath: default.vcl
      volumes:
        - name: config
          configMap:
            name: varnish-config
---
apiVersion: v1
kind: Service
metadata:
  name: varnish
  namespace: drupal
spec:
  selector:
    app: varnish
  ports:
    - port: 80
      targetPort: 6081
