k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drupal
  namespace: drupal
spec:
  ingressClassName: nginx
  rules:
    - host: drupal.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: varnish
                port:
                  number: 80
